# libnrbf

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-tidy.yml
cmake/: nrbfConfig.cmake.in
include/nrbf/: nrbf.hpp  profile.hpp
src/: reader.cpp
tests/: test_dump.cpp  test_multi.cpp
